# wsl2-docker-opengl-template

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
glad/include/glad/: glad.h
glad/src/: glad.c
src/: main.cpp
